force-app/main/default/objects/Trade_Show__c/Trade_Show__c.object-meta.xml
<CustomObject>
    <label>Trade Show</label>
    <nameField>
        <label>Trade Show Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Shows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>