force-app/main/default/objects/Trade_Show__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IMAGE( Logo_Source__c , &quot;&quot;, 64, 128)</formula>
    <label>Logo</label>
    <type>Text</type>
</CustomField>