force-app/main/default/objects/Trade_Show__c/fields/Logo_Source__c.field-meta.xml
<CustomField>
    <fullName>Logo_Source__c</fullName>
    <label>Logo Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>