force-app/main/default/objects/Trade_Show__c/listViews/Coffee_Trade_Shows.listView-meta.xml
<ListView>
    <fullName>Coffee_Trade_Shows</fullName>
    <columns>Logo__c</columns>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Venue__c</columns>
    <filterScope>Everything</filterScope>
    <label>Coffee Trade Shows</label>
</ListView>